[package]
name = "rusty-swag"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
url = "2.5"
urlencoding = "2.1"
anyhow = "1.0"
futures = "0.3"
chrono = "0.4"
